<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.omeryaari.minesweeper.ui.HelpActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/help_activity_title"
        android:textSize="20pt"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/help_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="10pt"
            android:gravity="center_horizontal"
            android:text="@string/help_activity_text1"/>

        <ImageView
            android:id="@+id/mine_image_view"
            android:layout_width="50dp"
            android:layout_height="66dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/mine"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/help_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:layout_gravity="center_horizontal"
            android:text="@string/help_activity_text2"/>

        <TextView
            android:id="@+id/help_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="10pt"
            android:layout_gravity="center_horizontal"
            android:text="@string/help_activity_text3"/>

        <ImageView
            android:id="@+id/flag_image_view"
            android:layout_width="50dp"
            android:layout_height="66dp"
            android:src="@drawable/redflag"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/help_text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:layout_gravity="center_horizontal"
            android:text="@string/help_activity_text4"/>

    </LinearLayout>

    <Button
        android:id="@+id/return_button"
        android:layout_alignParentBottom="true"
        android:text="@string/help_return"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>
