<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_outcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.omeryaari.minesweeper.ui.OutcomeActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/outcome_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/new_highscore_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/holo_orange_light"
        android:layout_marginTop="30dp"
        android:text=""/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="90dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/time_played_text_view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="@string/time_played_text"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/time_played_text_view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/best_time_text_view1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:text="@string/best_time_text"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/best_time_text_view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/save_name_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

    </LinearLayout>

    <Button
        android:id="@+id/save_score_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:text="@string/save_name_button"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
